<?xml version="1.0" encoding="utf-8"?>
<!-- BS03 Edit Personal Item -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/screen_margin"
    android:paddingTop="@dimen/space_2xl"
    android:paddingEnd="@dimen/screen_margin"
    android:paddingBottom="@dimen/space_2xl">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bs_edit_item_title"
        android:textAppearance="@style/TextAppearance.Bag.TitleM" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editItemNameLayout"
        style="@style/Widget.Bag.TextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xl"
        android:hint="@string/bs_add_item_name_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editItemNameInput"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_field_height"
            android:textAppearance="@style/TextAppearance.Bag.BodyL" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2xl"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editItemDeleteButton"
            style="@style/Widget.Bag.Button.Secondary.Outline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_sm"
            android:layout_weight="1"
            android:text="@string/action_delete"
            android:textColor="@color/bag_status_danger"
            app:strokeColor="@color/bag_status_danger" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editItemSaveButton"
            style="@style/Widget.Bag.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_save" />
    </LinearLayout>

</LinearLayout>
